@@ -122,6 +122,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
   and a way to tell the user to create a profile before using the 
   server/local test
 **** TODO Handle the Options gamestate
+     CLOCK: [2016-11-21 lun. 00:15]--[2016-11-21 lun. 01:41] =>  1:26
      CLOCK: [2016-11-20 dim. 23:03]--[2016-11-21 lun. 00:06] =>  1:03
      CLOCK: [2016-11-20 dim. 21:04]--[2016-11-20 dim. 23:01] =>  1:57
      CLOCK: [2016-11-19 sam. 03:54]--[2016-11-19 sam. 04:04] =>  0:10
@@ -189,8 +190,10 @@ Error is fixed, was due to a src/services/Services.hpp old code
         - [X] Restart Ogre an subsystem (OIS, CEGUI etc...)
 	- [X] First redraw overlays
 	  We have a segfault when re-entering gamestate in GameState::loadLayout()
-      - [ ] Then implement save/restore in MainMenu
-	save the visible state of NyiDialogs, positions of windows etc...
+      - [-] Then implement save/restore in MainMenu
+	- [X] save the visible state of NyiDialogs, 
+        - [ ] positions of main menu
+        - [ ] Position of dialogs
 - [ ] It could be fine if this changes could be serialized in the same
   way Ogre does it. This way, at next startup, the Ogre config dialog
   would be defaulted to in-game options.
